--- a/company/基础.md
+++ b/company/基础.md
@@ -303,11 +303,32 @@
 
 
 
+# 集合
 
+## HashSet是如何保证元素不重复的？
 
+* 基于哈希表实现
 
+  HashSet构造函数中是通过HashMap来存储元素，其中Key为本身新增的元素，Value为HashSet为内部固定的静态Object对象(私有Present)
 
+  ```java
+  private transient HashMap<E,Object> map;
+  private static final Object PRESENT = new Object();
+  
+  public HashSet() {
+      map = new HashMap<>();
+  }
+  
+  public boolean add(E e) {
+    	return map.put(e, PRESENT)==null;
+  }
+  ```
 
+* 使用hashCode和equals方法
+
+  * 当向HashSet添加一个元素的时候，首先调用hashCode方法计算哈希值来决定在哈希表中的存储位置
+  * 在确定存储位置后，HashSet会检查该位置是否存在相同哈希值的元素，如果存在，利用equals方法判断两个元素是否相等，如果相同，认为元素存在，不能添加；否则添加到哈希表中
+  * 通过以上两个方法，HashSet可以快速检测和防止重复元素的添加，确保每个元素在Set中唯一的，HashSet 本质就是“只有 Key 的 HashMap”
 
 
 
