--- a/company/基础.md
+++ b/company/基础.md
@@ -305,6 +305,16 @@
 
 # 集合
 
+## Vector和ArrayList区别
+
+* 两者都是动态数组结构
+* 线程安全和效率：ArrayList非线程安全，效率更高；Vector线程安全，效率低，所有的方法都用synchronized同步锁
+* 扩容机制：ArrayList默认扩容为原来的1.5倍；Vector扩容为原来的两倍
+
+
+
+
+
 ## HashSet是如何保证元素不重复的？
 
 * 基于哈希表实现
@@ -332,19 +342,84 @@
 
 
 
+## HashSet和HashMap的区别
+
+> 如果需要存储一堆不重复的东西，用 `HashSet`；如果需要给这些东西关联额外的信息，用 `HashMap`。
+
+* HashSet存储的不重复的单个元素，用于快速检查某个元素key是否存在；HashMap存储k-v对
+
+* HashSet基于HashMap，当HashSet添加相同key时会判断是否存在旧value，存在就直接失败；HashMap则会覆盖旧value
+
+  ```java
+  //省略HashSet其它代码
+  public boolean add(E e) {
+    	return map.put(e, PRESENT)==null;
+  }
+  ```
+
+  
 
 
 
 
 
+## List接口和Set接口区别
+
+* 元素重复：List接口允许元素重复，Set接口不允许元素重复
+* 元素插入顺序：List接口元素按照插入顺序排列，有固定位置；Set接口大部分实现类是无序的
+* 元素位置访问：List接口提供了访问元素的方法，如get；Set接口没有提供这样的方法
+
+
+
+## HashMap的put方法返回值
+
+> **`HashMap.put()` 返回的是旧值，如果没有旧值（首次插入），返回 null**
+
+```java
+HashMap<String, String> map = new HashMap<>();
+System.out.println(map.put("a", "1")); // null，因为 "a" 第一次插入
+System.out.println(map.put("a", "2")); // 1，返回旧值 "1"
+System.out.println(map.put("a", "3")); // 2，返回旧值 "2"
+```
 
 
 
 
 
+## HashMap和TreeMap的区别
+
+* 底层结构：HashMap基于哈希表实现的，通过hash值确定存储位置；TreeMap基于红黑树实现的，是一种**自平衡二叉查找树**
+* key值顺序：HashMap默认情况下，不保证元素的存储顺序；TreeMap能够保证key的有序性，总是按照key的自然顺序创建或者自定义Comparator进行排序
+* key为null：**HashMap最多允许1个null key和多个null value**（所有null key会被映射到数组下标0的位置，并且会覆盖之前的null key）；**TreeMap 不允许 null key，允许 null value**（因为是拿key作为树节点，BST树节点为空就不能查找了）
+* 复杂度：HashMap的查找、插入、删除平均复杂度为O(1)；TreeMap的查找、插入、删除的时间复杂度为O(logn)
 
 
 
+
+
+## HashMap和HashTable的区别
+
+* 底层结构：HashMap为数组+链表和红黑树；HashTable是数组+链表
+
+* **效率：HashMap效率高，因为没有锁开销；HashTable大部分方法有synchronized同步锁**
+
+* 线程安全：HashMap非线程安全（如果需要线程安全，推荐使用`ConcurrentHashMap`）；HashTable线程安全
+
+* 扩容机制：HashMap默认16，扩容x2；HashTable默认11，扩容x2+1
+
+* **null值：HashMap允许一个null key和多个null value；HashTable不允许null key和value**
+
+  ```java
+  //省略HashTable其它代码
+  public synchronized V put(K key, V value) {
+          if (value == null) {
+              throw new NullPointerException();
+          }
+          int hash = key.hashCode(); //如果key为空，这里也会空指针
+   }
+  ```
+
+  
 
 
 
