--- a/company/基础.md
+++ b/company/基础.md
@@ -423,6 +423,64 @@ System.out.println(map.put("a", "3")); // 2，返回旧值 "2"
 
 
 
+# Spring
+
+## Spring使用到的设计模式
+
+* 工厂设计模式：Spring使用工厂模式通过BeanFactory、ApplicationContext 创建 bean 对象。
+* 代理设计模式：Spring AOP功能实现（JDK动态代理、CGLIB动态代理）
+* 单例设计模式：Spring 中的 Bean 默认都是单例的、并且是饿汉式模式(启动容器就生成实例，懒汉式：第一次请求才会创建)
+* 模版方法设计模式：Spring 中 jdbcTemplate、hibernateTemplate 等以 Template 结尾的对数据库操作
+* 适配器模式：Spring AOP 的增强或通知、Spring MVC都用到了适配器模式
+
+
+
+
+
+## AOP
+
+> **AOP在spring中有两种实现方式：JDK动态代理、CGLIB动态代理**
+
+* JDK动态代理（默认情况，eg：常用开发中service、service.impl）：目标类实现了某个接口，运行时生成代理类实现接口的方法
+* CGLIB动态代理（eg：没有父类、接口就会切换为CGLIB或者强制配置Spring使用）：目标类和方法不能声明为final（因为是通过继承的方式，所以不能是final），运行时为目标类生成一个子类，覆盖其中的所有方法
+
+
+
+## @Autowired和@Resource区别
+
+* @Autowired是Spring提供的注解；@Resource是JDK提供的注解
+* @Autowired是只能按类型注入；@Resource先按名次注入，找不到再按类型注入
+* @Autowired可以和@Qualifier一起使用按名次注入；@Resource可以配置name属性或type属性来指定方式注入
+
+
+
+
+
+## BeanFactory接口和FactoryBean接口区别
+
+> **BeanFactory（Bean工厂） 是 Spring 的工厂，FactoryBean（工厂Bean）是自定义功能的特殊Bean**
+
+*  **BeanFactory是Spring最核心的IOC接口，用来管理Bean的生命周期，提供getBean()等方法**
+  * **BeanFactory**和**ApplicationContext**是**spring**框架的两个**IOC**容器，现在一般使用 **ApplicationnContext**（eg：最常见的子类ClassPathXmlApplicationContext类路径加载xml、AnnotationConfigApplicationContext注解加载等，都是**ApplicationContext**的子类，而ApplicationContext间接实现了BeanFactory）
+* **FactoryBean是Spring提供的特殊接口，用来定制Bean的创建逻辑**（eg：返回代理对象、复杂对象、第三方类）
+  * 某些特殊情况下，实例化Bean需要复杂逻辑，如果按照传统xml方式则会配置大量信息，此时就可以实现这个接口来定制化
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
