--- a/company/基础.md
+++ b/company/基础.md
@@ -467,9 +467,51 @@ System.out.println(map.put("a", "3")); // 2，返回旧值 "2"
 
 
 
+## 事务传播机制
 
+> 前提条件：**在一个事务方法中调用了另一个事务方法**，也就是“外层事务包含了内层事务的执行”，eg：事务A代码块里面调用了事务B的代码块方法
 
+```java
+@Service
+public class ServiceA {
+    @Autowired
+    private ServiceB serviceB;
 
+    @Transactional(propagation = Propagation.REQUIRED） //设置级别，默认REQUIRED
+    public void methodA() {
+        System.out.println("A start");
+        serviceB.methodB();		//事务A钟包含事务B
+        System.out.println("A end");
+    }
+}
+
+@Service
+public class ServiceB {
+    @Transactional(propagation = Propagation.xxx） //自定义设置级别，下面任意几个之一
+    public void methodB() {
+        System.out.println("B running");
+        throw new RuntimeException("B出错了");
+    }
+}
+```
+
+==注意：下面说的外层内层事务，默认将外层设为REQUIRED级别，内层自定义设为下面几种之一，方便理解==
+
+* REQUIRED（默认）：如果外层存在事务，内层则加入当前事务；如果外层没有事务，则内层方法会新建一个事务（**eg：A和B要么同时提交，要么同时回滚）**
+
+* REQUIRES_NEW：**内层总是新建一个事务，保证自己独立提交或回滚**，原来的外层事务挂起**（eg：B回滚，A不受影响）**
+
+* NESTED：如果外层有事务，内层事务会在外层嵌套一个事务保存点，如果内层回滚不会影响外层；如果没有事务，则新建一个事务（**内层事务依赖外层事务，属于外层事务的嵌套保存点**）
+
+* SUPPORTS：如果外层有事务，内层则加入当前事务；如果外层没有事务，内层不管有无事务都是以普通方法执行
+
+* NOT_SUPPORTED：如果外层有事务，就把外层事务挂起，内层当成普通方法处理（**内层出现异常也不会回滚，但是内层抛出异常会影响外层事务）**
+
+* NEVER：不支持事务，如果存在事务，就抛异常（**只要内层处于外层事务中就抛异常**）
+
+* MANDATORY：必须运行在事务中，没事务就抛异常（**只要外层没事务就抛异常**）
+
+  
 
 
 
