--- a/company/算法.md
+++ b/company/算法.md
@@ -2,6 +2,8 @@
 
 ## 动态规划
 
+### 打家劫舍
+
 [198. 打家劫舍](https://leetcode.cn/problems/house-robber/)
 
 <img src="./算法_images/image-20251011175745498.png" alt="image-20251011175745498" style="zoom:50%;" /> 
@@ -27,6 +29,185 @@ public int rob(int[] nums) {
 
       return dp[nums.length - 1];
 }
+```
+
+
+
+
+
+### 三角形最小路径和
+
+https://leetcode.cn/problems/triangle/description/?envType=study-plan-v2&envId=dynamic-programming
+
+<img src="./算法_images/image-20251013110714127.png" alt="image-20251013110714127" style="zoom:50%;" /> 
+
+
+
+```java
+//工具类:将集合转为数组
+private static int[][] convertListToArray(List<List<Integer>> triangle) {
+    //获取最大的行、列
+    int row = triangle.size();
+    int col = 0;
+    for (List<Integer> list : triangle) {
+        col = Math.max(col, list.size());
+    }
+    int matrix[][] = new int[row][col];
+    //初始化每行数据
+    for (int i = 0; i < row; i++) {
+        for (int j = 0; j < col; j++) {
+            try {
+                //下标一旦越界,那么就默认初始化为最大值
+                matrix[i][j] = triangle.get(i).get(j);
+            } catch (Exception e) {
+                matrix[i][j] = 9999;
+            }
+
+        }
+    }
+    return matrix;
+}
+
+//核心算法
+public static int minimumTotal(List<List<Integer>> triangle) {
+        /**
+         *          2
+         *         3 4
+         *        6 5 7            即 2 + 3 + 5 + 1 = 11 最短
+         *       4 1 8 3
+         * 
+         *    2 ∞ ∞ ∞  -->  2   ∞   ∞  ∞
+         *    3 4 ∞ ∞       5   6   ∞  ∞
+         *    6 5 7 ∞       11  10  13 ∞
+         *    4 1 8 3       14  11  18 16
+         */
+  
+  			//这里可以优化：可以不用转换，直接使用集合来操作,这里为了简单易懂用了转换
+        int matrix[][] = convertListToArray(triangle);
+        int row = matrix.length;
+        int col = matrix[0].length;
+
+        if (row == col && row == 1) return triangle.get(0).get(0);
+
+        //定义dp为从左上角的点到最下面一行每个点的最短路径
+        int dp[][] = new int[row][col];
+        dp[0][0] = matrix[0][0];
+
+        //初始化dp数组第一行
+        for (int i = 1; i < col; i++) {
+            dp[0][i] = matrix[0][i];
+        }
+        //初始化第一列
+        for (int i = 1; i < row; i++) {
+            dp[i][0] = matrix[i][0] + dp[i - 1][0];
+        }
+
+        //状态转移方程
+        for (int i = 1; i < row; i++) {
+            for (int j = 1; j < col; j++) {
+                //当前的点的路径值=min(本身的值+上面一行的值 或 上一行的左边一个值)
+                dp[i][j] = matrix[i][j] + Math.min(dp[i - 1][j], dp[i - 1][j - 1]);
+            }
+        }
+
+        //获取最后一行的最小值
+        int min = 9999;
+        for (int i = 0; i < col; i++) {
+            min = Math.min(min, dp[row - 1][i]);
+        }
+        return min;
+    }
+```
+
+
+
+
+
+
+
+
+
+### 最小路径和
+
+https://leetcode.cn/problems/minimum-path-sum/description/?envType=study-plan-v2&envId=dynamic-programming
+
+<img src="./算法_images/image-20251013101435592.png" alt="image-20251013101435592" style="zoom:40%;" /> 
+
+```java
+public static int minPathSum(int[][] grid) {
+        int row = grid.length;
+        int col = grid[0].length;
+  
+        //定义dp为从m行到j列的最小花费总和
+        int dp[][] = new int[row][col];
+        dp[0][0] = grid[0][0];
+
+        //第一行
+        for (int i = 1; i < col; i++) {
+            dp[0][i] = grid[0][i] + dp[0][i - 1];
+        }
+        //第一列
+        for (int i = 1; i < row; i++) {
+            dp[i][0] = grid[i][0] + dp[i - 1][0];
+        }
+        //转移方程
+        for (int i = 1; i < row; i++) {
+            for (int j = 1; j < col; j++) {
+                //当前的cost=min(grid自身的值+当前上面或当前左边的值）
+                dp[i][j] = grid[i][j] + Math.min(dp[i - 1][j], dp[i][j - 1]);
+            }
+        }
+        return dp[row - 1][col - 1];
+    }
+```
+
+
+
+### 下降路径最小和
+
+https://leetcode.cn/problems/minimum-falling-path-sum/description/?envType=study-plan-v2&envId=dynamic-programming
+
+<img src="./算法_images/image-20251013113542243.png" alt="image-20251013113542243" style="zoom: 33%;" /> 
+
+```java
+ public static int minFallingPathSum(int[][] matrix) {
+        int row = matrix.length;
+        int col = row;
+
+        //定义dp为从左上角的点到最下面一行每个点的最小路径和
+        int dp[][] = new int[row][col];
+        dp[0][0] = matrix[0][0];
+
+        //只能初始化第一行的每列,不能初始化第一列的每行,因为从第二行开始，可以有三个方向得到值
+        for (int i = 1; i < col; i++) {
+            dp[0][i] = matrix[0][i];
+        }
+
+        //状体转移方程:当前的数据=min（本身的值+ 当前行的左上、正上、右上的值）
+        for (int i = 1; i < row; i++) {
+            for (int j = 0; j < col; j++) {
+                int value;
+                //如果是列的左边缘,那么就没有左上
+                if (j == 0) {
+                    value = Math.min(dp[i - 1][j + 1], dp[i - 1][j]);
+                }
+                //如果是列的右边缘,那么就没有右上
+                else if (j == col - 1) {
+                    value = Math.min(dp[i - 1][j - 1], dp[i - 1][j]);
+                } else {
+                    value = Math.min(Math.min(dp[i - 1][j - 1], dp[i - 1][j + 1]), dp[i - 1][j]);
+                }
+                dp[i][j] = matrix[i][j] + value;
+            }
+        }
+
+        //获取最后一行的最小值
+        int min = Integer.MAX_VALUE;
+        for (int i = 0; i < col; i++) {
+            min = Math.min(min, dp[row - 1][i]);
+        }
+        return min;
+    }
 ```
 
 
