增加回溯算法

--- a/company/算法.md
+++ b/company/算法.md
@@ -1,5 +1,161 @@
 # 算法
 
+## 回溯算法
+
+### 模版代码
+
+```java
+//先写backtracking的for循环代码
+//再写终止条件
+//最后确定递归参数（需要什么补充什么）
+void backtracking(参数) {
+    if (终止条件) {
+        存放结果;		//添加结果的时候,注意集合要用new的方式，因为Java是值传递，集合传递的是内存地址值,会在原基础上修改
+        return;
+    }
+
+    for (选择：本层集合中元素（树中节点孩子的数量就是集合的大小）) {
+        处理当前节点;
+        backtracking(路径，选择列表); // 递归选择下一个
+        回溯，撤销刚才选择的结果
+    }
+}
+```
+
+
+
+### 组合问题
+
+https://leetcode.cn/problems/combinations/
+
+<img src="./算法_images/image-20251029112948638.png" alt="image-20251029112948638" style="zoom:50%;" /> 
+
+```java
+List<List<Integer>> result = new ArrayList<>();
+List<Integer> cur = new ArrayList<>();
+
+public List<List<Integer>> combine(int n, int k) {
+    backtracking(n, k, 1);
+    return result;
+}
+
+void backtracking(int n, int k, int startIndex) {
+    if (cur.size() == k) {
+        result.add(new ArrayList<>(cur));
+        return;
+    }
+
+    for (int i = startIndex; i <= n; i++) {
+        //选择当前的值
+        cur.add(i);
+        //递归选择下一次的值（这里i+1,因为不能重复选）
+        backtracking1(n, k, i + 1);
+        //撤销刚刚选择的值
+        cur.remove(cur.size() - 1);
+    }
+}
+```
+
+
+
+
+
+### 组合总和
+
+https://leetcode.cn/problems/combination-sum/description/
+
+<img src="./算法_images/image-20251029112910265.png" alt="image-20251029112910265" style="zoom:50%;" /> 
+
+```java
+List<List<Integer>> result = new ArrayList<>();
+List<Integer> cur = new ArrayList<>();
+
+public List<List<Integer>> combinationSum(int[] candidates, int target) {
+    back(candidates,target, 0, 0 );
+    return result;
+}
+
+void back(int[] candidates,int target, int startIndex, int curSum ) {
+		//如果总和等于目标,那么就放入并返回
+    if (curSum == target) {
+        result.add(new ArrayList<>(cur));
+        return;
+    }
+    //如果当前总和超过了目标,也返回
+    if (curSum > target) {
+        return;
+    }
+
+    for (int i = startIndex; i < candidates.length; i++) {
+      	//选择当前值
+        cur.add(candidates[i]);
+       //当前总和放入
+        curSum += candidates[i];
+        //因为可以重复选,所以递归选择
+        back(candidates, i, curSum, target);
+      	//撤销上一次选择的
+        curSum -= cur.get(cur.size() - 1);
+        cur.remove(cur.size() - 1);
+    }
+
+}
+```
+
+
+
+### 组合总和III
+
+https://leetcode.cn/problems/combination-sum-iii/
+
+<img src="./算法_images/image-20251029112926440.png" alt="image-20251029112926440" style="zoom:50%;" /> 
+
+```java
+List<List<Integer>> result = new ArrayList<>();
+List<Integer> cur = new ArrayList<>();
+
+public List<List<Integer>> combinationSum3(int k, int n) {
+    backtracking(k, n, 1, 0);
+    return result;
+}
+
+void backtracking(int k, int n, int startIndex, int curSum) {
+		//如果当前大小等于k
+    if (cur.size() == k) {
+      	//并且当前的总和等于n,就放入结果
+        if (curSum == n) {
+            result.add(new ArrayList<>(cur));
+        }
+      	//否则全都返回
+        return;
+    }
+
+    for (int i = startIndex; i <= 9; i++) {
+      	//放入当前的值、总和
+        cur.add(i);
+        curSum += i;
+			
+      	//选择下一次的,因为不能重复
+        backtracking(k, n, i + 1, curSum);
+
+      	//撤销刚刚选择的
+        curSum -= cur.get(cur.size() - 1);
+        cur.remove(cur.size() - 1);
+
+    }
+
+}
+```
+
+
+
+
+
+
+
+
+
+
+
 ## 动态规划
 
 ### 打家劫舍
