--- a/company/算法.md
+++ b/company/算法.md
@@ -1,5 +1,38 @@
 # 算法
 
+## 双指针
+
+[977. 有序数组的平方 - 力扣（LeetCode）](https://leetcode.cn/problems/squares-of-a-sorted-array/description/)
+
+![image-20251111143123755](算法_images/image-20251111143123755.png) 
+
+```java
+public int[] sortedSquares(int[] nums) {
+    int result[] = new int[nums.length];
+    //首尾指针
+    int startIndex = 0;
+    int endIndex = nums.length - 1;
+    int size = nums.length - 1;
+
+    while (size >= 0) {
+        //因为nums是有序数组,所以左右两边的平方一定比中间大,从两边往中间遍历，把最大的放在新数组右边
+        //判断首尾谁的绝对值大就把它放在新数组末尾
+        if (Math.abs(nums[startIndex]) > Math.abs(nums[endIndex])) {
+            result[size--] = nums[startIndex] * nums[startIndex];
+            startIndex++;
+        } else {
+            result[size--] = nums[endIndex] * nums[endIndex];
+            endIndex--;
+        }
+    }
+    return result;
+}
+```
+
+
+
+
+
 ## 回溯算法
 
 ### 模版代码
@@ -50,7 +83,7 @@ void backtracking(int n, int k, int startIndex) {
         cur.add(i);
         //递归选择下一次的值（这里i+1,因为不能重复选）
         backtracking1(n, k, i + 1);
-        //撤销刚刚选择的值
+        //撤销刚刚选择的值，eg：1 2 如果不弹出，cur则会变成1 2 3 4，只有弹出上一次的最后一个c
         cur.remove(cur.size() - 1);
     }
 }
