--- a/src/algorithm/算法.md
+++ b/src/algorithm/算法.md
@@ -4,7 +4,7 @@
 
 [977. 有序数组的平方 - 力扣（LeetCode）](https://leetcode.cn/problems/squares-of-a-sorted-array/description/)
 
-![image-20251111143123755](算法_images/image-20251111143123755.png) 
+![image-20251111143123755](./算法_images/image-20251111143123755.png) 
 
 ```java
 public int[] sortedSquares(int[] nums) {
